src/stylesheets/partials/_base.sass
$wellness-0: hsl(36, 100%, 66%)
$wellness-1: hsl(46, 100%, 64%)
$wellness-2: hsl(46, 100%, 64%)
$wellness-3: hsl(62, 75%, 58%)
$wellness-4: hsl(80, 84%, 60%)
$wellness-5:  hsl(121, 100%, 62%)

$accent: hsl(154, 100%, 50%)
$accent-shadow: hsl(154, 100%, 17%)


// Layout defaults
$footer-height: 165px
$header-height: 65px

*
  box-sizing: border-box

html, body
  height: 100%

  &.touch
    input[type=time]
      &::-webkit-inner-spin-button, &::-webkit-outer-spin-button
        -webkit-appearance: none

body
  // max-width: 320px
  // max-height: 356px
  // border: 1px solid #333
  margin: 0 auto
  line-height: 20px
  height: 100%
  min-height: 100%
  background-color: #333

  background-image: url('data:image/png;base64,' + $background-image)
  background-size: 7px 7px
  color: #fff
  text-align: center

  font:
    size: 16px
    family: "Press Start 2P", sans-serif
  text-shadow: 0px 1px 0px hsl(0, 0%, 47%), 0px 2px 0px hsl(0, 0%, 47%)

em
  font-style: normal
  color: $accent
  text-shadow: 0px 2px 1px $accent-shadow


.content
  padding-bottom: 20px

.wrapper
  min-height: 100%
  overflow: auto

  padding-bottom: $footer-height

  &.no-footer
    padding-bottom: 40px

.site-header
  height: $header-height
  padding: 10px 0 0
  text-align: center


  .logo
    display: inline-block
    font-size: 1.7em
    margin-bottom: 10px

    text-shadow: -1px 3px 0px hsl(0, 0%, 47%)

  .accent
    display: inline-block
    position: relative
    font-size: 0.24em
    top: -3.5em

  .subtitle
    color: $accent
    text-shadow: 0px 2px 1px $accent-shadow

.site-footer
  border: 1px solid transparent
  // display: none
  clear: both
  height: $footer-height
  margin-top: -$footer-height


.blurb
  display: none
  &.get-up
    display: block
    margin: 12px 0 40px

  &.bed-now
    display: block

  &.sleep-at
    margin: 15px 0 10px

  &.wake-time-explanation
    margin: 5px 0 12px

  &.bed-time-explanation
    margin: 5px 0 28px

  &.wake-up-at
    margin: 20px 0 10px

.share
  display: none
  padding-left: 30px
  text-align: center


.wake-up-container
  display: inline-block
  text-align: center
  border: 3px dashed lighten($accent, 30%)

  margin-top: 12px
  padding: 10px 4px

  input
    &[type=time]
      text-align: center

  &.set
    border-color: transparent


label
  display: none
input
  &[type=time]
    text-align: right
    border: none

    width: 175px
    margin: 5px 0
    font-size: 1.2em
    color: #fff
    background-color: transparent

      margin: 0
    &:disabled
      opacity: 1.0

    &.wake-time, &.bed-time
      display: inline-block
      margin-top: 10px

      &::-webkit-inner-spin-button, &::-webkit-outer-spin-button
        -webkit-appearance: none

      &[data-wellness='0']
        color: $wellness-0
        text-shadow: 0px 1px 0px darken($wellness-0, 50%), 0px 2px 0px darken($wellness-0, 50%)

      &[data-wellness='1']
        color: $wellness-1
        text-shadow: 0px 1px 0px darken($wellness-1, 50%), 0px 2px 0px darken($wellness-1, 50%)

      &[data-wellness='2']
        color: $wellness-2
        text-shadow: 0px 1px 0px darken($wellness-2, 50%), 0px 2px 0px darken($wellness-2, 50%)
      &[data-wellness='3']
        color: $wellness-3
        text-shadow: 0px 1px 0px darken($wellness-3, 50%), 0px 2px 0px darken($wellness-3, 50%)
      &[data-wellness='4']
        color: $wellness-4
        text-shadow: 0px 1px 0px darken($wellness-4, 50%), 0px 2px 0px darken($wellness-4, 50%)
      &[data-wellness='5']
        color: $wellness-5
        text-shadow: 0px 1px 0px darken($wellness-5, 50%), 0px 2px 0px darken($wellness-5, 50%)

.btn
  display: block
  font-size: 18px
  text-decoration: none

  color: white
  background-color: hsl(172, 100%, 47%)
  padding: 10px 20px
  margin: 10px
  border-radius: 2px

  box-shadow: 0px 6px 0 hsl(172, 50%, 47%), 2px 8px 17px hsl(172, 26%, 36%), inset 1px 1px 4px hsl(171, 0%, 100%)

  text-shadow: 0px -1px 0 hsl(0, 0%, 37%)

  &:hover
    +transition-property(all)
    +transition-duration(200ms)
    +transition-timing-function(ease-out)

    background-color: hsl(172, 95%, 47%)
    box-shadow: 0 6px 0 hsl(172, 50%, 47%), 3px 10px 10px hsl(172, 26%, 36%), inset 1px 1px 4px hsl(171, 0%, 100%)


  &.primary
    background-color: hsl(345, 100%, 47%)
    box-shadow: 0px 6px 0 hsl(345, 50%, 47%), 2px 8px 18px hsl(345, 68%, 34%), inset 1px 1px 4px hsl(0, 72%, 71%)
    text-shadow: 0px -1px 0 hsl(0, 0%, 20%)

    &:hover
      background-color: hsl(346, 95%, 47%)
      box-shadow: 0px 6px 0 hsl(345, 50%, 47%), 3px 10px 10px hsl(345, 68%, 34%), inset 1px 1px 4px hsl(0, 72%, 71%)

